--- a/page12.html
+++ b/page12.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section form1 cid-rXbkFWOcVx" id="form1-20">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="mbr-section form1 cid-rXbkFWOcVx" id="form1-20">
 
     
 
@@ -73,7 +73,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="lWGEO1k/fA2nPL5NrSVW/ur/qfX1CCzukFVKgriyD9xzz7DP2YCFT75HzeTFerDiPDTgkot/GmsiurOFFBLTFeII5T3g7swMch2WYn4jSItGbY7M+2v5vhrWndQ2GqYV">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wMmuUxkSexvk1tzZqA8X1F6bPACaEuyf1dkM7OgMv6CHldSStKw0TDS+oFLu0oZSDgRPc/vFPOw3kfdUkKfXG7K5wVxmZUKVuIeD8egRuzAAs0luSsZbc0DCJqHYznRi">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for attending your class</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
