create github pages

--- a/page12.html
+++ b/page12.html
@@ -43,7 +43,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pV1zfQeXMo/6yGvtXFzmr9sHrY+MwwmiVdG/s/nRH/zikqLAbP6QpocUa7AUI3Yc/dJR0Q3XlGmVJt8AMx/WnfIPo/6cTl8PU6Tr/eKp1JaxYTvxbDzgkpEp/XypnL/m">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VomtkQsXWvxetYa87T+2ijQ5bGA+YBzJDWSCNAJwSjNGyFDdRXggsPVMbCgo4K2qYDVrR54Qp4QbvEXIyLKbjzIlUAv09sfbbcELJH1Z9HWesTTRYyyO+XC2hdcSbQi1">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for attending your class</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -71,7 +71,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own site</a></section><section class="menu cid-rVvcHYkoHn" once="menu" id="menu1-1y">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="menu cid-rVvcHYkoHn" once="menu" id="menu1-1y">
 
     
 
