--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="header3 cid-rZQEAqitOz mbr-parallax-background" id="header3-2x">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header3 cid-rZQEAqitOz mbr-parallax-background" id="header3-2x">
 
     
 
@@ -79,7 +79,7 @@
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-7"><strong>School Motto: STRIVE FOR WHOLENESS</strong><br></p>
                 </div>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="https://somohub.github.io/LOGS/page1.html"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>STUDENTS CENTER</a> <a class="btn btn-md btn-secondary-outline display-4" href="https://somohub.github.io/LOGS/page3.html"><span class="mbri-extension mbr-iconfont mbr-iconfont-btn"></span>SCHOOL E-MANAGEMENT&nbsp;</a> <a class="btn btn-md btn-danger display-4" href="https://somohub.github.io/LOGS/page2.html"><span class="mbri-extension mbr-iconfont mbr-iconfont-btn"></span>PTA E-PARENTING</a>   <a class="btn btn-md btn-success-outline display-4" href="https://docs.google.com/forms/d/e/1FAIpQLSdKxQBaXbWe8v41ZlBuzuI7GoGno0hthmBndawJCTxMLY0ghQ/viewform"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>REPORT A PROBLEM</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-danger display-4" href="https://somohub.github.io/LOGS/page1.html"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>STUDENTS CENTER</a> <a class="btn btn-md btn-secondary-outline display-4" href="https://somohub.github.io/LOGS/page3.html"><span class="mbri-extension mbr-iconfont mbr-iconfont-btn"></span>SCHOOL E-MANAGEMENT&nbsp;</a> <a class="btn btn-md btn-danger display-4" href="https://somohub.github.io/LOGS/page2.html"><span class="mbri-extension mbr-iconfont mbr-iconfont-btn"></span>PTA E-PARENTING</a>   <a class="btn btn-md btn-success-outline display-4" href="https://wa.me/+254788829523"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>REPORT A PROBLEM</a></div>
             </div>
         </div>
     </div>
@@ -98,7 +98,7 @@
                 <div class="col-md-12 align-center">
                     <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-5">WELCOME TO INORO GIRLS &nbsp;SCHOOL E-LEARNING PROGRAM</h1>
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5"><strong>STUDENTS CENTER </strong><br>Please click one of the icons below &nbsp; ( N/B Form 4 Revision content Password: SafeHands)<br></p>
-                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-danger display-4" href="assets/files/CLICK-ME-protected.pdf"><span class="mbri-question mbr-iconfont mbr-iconfont-btn"></span>TEACHER IS ONLINE &nbsp;ASK QUESTIONS&nbsp;</a> <a class="btn btn-md btn-danger display-4" href="page22.html"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>ONLINE NATIONAL KCSE TRIVIAL</a></div>
+                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-danger display-4" href="page22.html"><span class="mbri-protect mbr-iconfont mbr-iconfont-btn"></span>ONLINE NATIONAL TRIVIAL</a></div>
 
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
