--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header3 cid-rZQEAqitOz mbr-parallax-background" id="header3-2x">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header3 cid-rZQEAqitOz mbr-parallax-background" id="header3-2x">
 
     
 
