--- a/page12.html
+++ b/page12.html
@@ -43,7 +43,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VomtkQsXWvxetYa87T+2ijQ5bGA+YBzJDWSCNAJwSjNGyFDdRXggsPVMbCgo4K2qYDVrR54Qp4QbvEXIyLKbjzIlUAv09sfbbcELJH1Z9HWesTTRYyyO+XC2hdcSbQi1">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pOraDYfbpAFb55iiA4u4Yic5RRS7KOyMjldwgRai0/UqL4IdVpXVJy7nTwgJGlUWVFJZdOsQjJIOO4nYOmXn6KcFci5Y25SSyae91tdMpVxnLQoqBZvgYkR9bhjwGLL5">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for attending your class</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -71,7 +71,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="menu cid-rVvcHYkoHn" once="menu" id="menu1-1y">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="menu cid-rVvcHYkoHn" once="menu" id="menu1-1y">
 
     
 
